# topograft

./: README.md  draw.py  gif.js  index.html  node.js  omggif.js  plates.py  pyproject.toml  rainfall.js  triangles.py
python/: main.py  node.py  pyproject.toml  triangles.py
