[tool.poetry]
name = "mapgen"
version = "0.1.0"
description = ""
authors = ["Gerhalt <gerhalt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
Pillow = "^9.1.0"
scipy = "^1.8.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
